[tool.poetry]
name = "pyhashlib_benchmark"
version = "0.1.0"
description = "Benchmarks the available hash algorithms in Python"
authors = ["Dale Hui <dhui@users.noreply.github.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
